feat: 사용자 포트폴리오 관련 키도 배열을 통해 받을 수 있도록